--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "jobserver"
 version = "0.1.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>"]
+license = "MIT/Apache-2.0"
+repository = "https://github.com/alexcrichton/jobserver-rs"
+homepage = "https://github.com/alexcrichton/jobserver-rs"
+documentation = "https://docs.rs/jobserver"
+description = """
+An implementation of the GNU make jobserver for Rust
+"""
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
