Add a helper thread structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,7 @@ harness = false
 name = "make-as-a-client"
 path = "tests/make-as-a-client.rs"
 harness = false
+
+[[test]]
+name = "helper"
+path = "tests/helper.rs"
