Add log statements do diagnose what's happening

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ description = """
 An implementation of the GNU make jobserver for Rust
 """
 
+[dependencies]
+log = "0.4"
+
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
