Migrate to the 2018 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ documentation = "https://docs.rs/jobserver"
 description = """
 An implementation of the GNU make jobserver for Rust
 """
+edition = "2018"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.50"
