Replace tempdir with tempfile, as the tempdir crate have been superceded by tempfile

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ libc = "0.2.50"
 [dev-dependencies]
 futures = "0.1"
 num_cpus = "1.0"
-tempdir = "0.3"
+tempfile = "3"
 tokio-core = "0.1"
 tokio-process = "0.2"
 
