--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ libc = "0.2.50"
 futures = "0.1"
 num_cpus = "1.0"
 tempfile = "3"
+tokio = { version = "1.20.0", features = ["full"] }
 tokio-core = "0.1"
 tokio-process = "0.2"
 
