--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
-name = "jobserver"
-version = "0.1.24"
-authors = ["Alex Crichton <alex@alexcrichton.com>"]
+name = "jobslot"
+version = "0.1.0"
+authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
 license = "MIT/Apache-2.0"
-repository = "https://github.com/alexcrichton/jobserver-rs"
-homepage = "https://github.com/alexcrichton/jobserver-rs"
-documentation = "https://docs.rs/jobserver"
+repository = "https://github.com/cargo-bins/jobslot"
+homepage = "https://github.com/cargo-bins/jobslot"
+documentation = "https://docs.rs/jobslot"
 description = """
 An implementation of the GNU make jobserver for Rust
 """
-edition = "2018"
+edition = "2021"
+rust-version = "1.61.0"
 
 [dependencies]
-tokio = { version = "1", no-default-features = true, features = ["process"], optional = true }
+tokio = { version = "1", default-features = false, features = ["process"], optional = true }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.50"
