--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "jobslot"
 version = "0.1.0"
-authors = ["Jiahao XU <Jiahao_XU@outlook.com>"]
+authors = ["Jiahao XU <Jiahao_XU@outlook.com>", "Alex Crichton <alex@alexcrichton.com>"]
 license = "MIT/Apache-2.0"
 repository = "https://github.com/cargo-bins/jobslot"
 homepage = "https://github.com/cargo-bins/jobslot"
