Refactor src, minor optimization and add doc (#8)
* Add new dep cfg-if v1.0.0
* Simplify `cfg` in `lib.rs` using `cfg_if!`
* Use `libc::pipe2` instead of `libc::syscall(libc::SYS_pipe2)`
* Use `Ordering::Relaxed` when load/store `PIPE2_AVAILABLE` in `Client::mk`
* Add example for `tokio::process::Command`
* Refactor `Client::from_env` and remove use of `unwrap`
   ret `None` instead since `unwrap` would panic on invalid input.
* Improve readability of `Client::from_env` impl
   First split the var using ascii whitespace, then search for specific
   prefixes and then find the first non-empty one.
* Refactor `unix::Client::open`: Improve readability
* Fix `unix::Client::open`: Set read/write to be blocking
* Improve readability of `unix::Client::mk`
* Impl new fn `unix::is_pipe` & use it in `Client::open`
   to reject more invalid fds which are:
    - not pipe
    - not readable/writeable
* Improve readability of `unix::Client::mk`
* Simplify `unix::Client::acquire_allow_interrupts`
   We set both fds to blocking mode in `unix::Client::{new, open}`, so we
   don't need to use `poll` here to handle non-blocking fds.
* Fix clippy warning in `wasm::spawn_helper`
* Fix clippy warning in `windows::Client::new`
* Fix `unix::Client::mk`

Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2021"
 rust-version = "1.61.0"
 
 [dependencies]
+cfg-if = "1.0.0"
 tokio = { version = "1", default-features = false, features = ["process"], optional = true }
 
 [target.'cfg(unix)'.dependencies]
