Improve win impl (#16)
* Fix required-features for test `client`
* Add dep getrandom v0.2.7 for windows
   With feature
    - std: Implement std-only traits for getrandom::Error
    - rdrand: Enable fallback RDRAND-based implementation on x86/x86_64
* Use `getrandom::getrandom` instead of homebrew `getrandom` on win
* Add dep winapi v0.3.9 for windows
* Use `winapi` instead of declaraing system APIs in this crate
* Use constants defined in `winapi`
* Fix cloning `Arc` in `windows::spawn_helper`
* Make `windows::Handle` contain `NonNull<c_void>`
   instead of just `HANDLE` to make it clear that it cannot be NULL and
   enable some optimizations.
* Mark `windows::Handle` as `repr(transparent)`
* Def all const at module level
* Mark `Handle::new*` as `unsafe`
* Reduce scope of `unsafe` in `windows::Client::new`
* Refactor `windows::Client::new`: Impl readability
* Fix loop in `windows::Client::new`
  The loop should check error returned by `Handle::new_or_err`.
* Raise err if `limit` is too large to fit in `LONG`
* Update README
* Change name of sem on windows to start with `__rust_jobslot`

Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,13 @@ scopeguard = "1.1.0"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.132"
 
+[target.'cfg(windows)'.dependencies]
+# Features: 
+#  - std: Implement std-only traits for getrandom::Error
+#  - rdrand: Enable fallback RDRAND-based implementation on x86/x86_64
+getrandom = { version = "0.2.7", features = ["std", "rdrand"] }
+winapi = { version = "0.3.9", features = ["synchapi"] }
+
 [dev-dependencies]
 tempfile = "3"
 tokio = { version = "1.20.0", features = ["full"] }
@@ -38,6 +45,7 @@ tokio = { version = "1.20.0", features = ["full"] }
 name = "client"
 harness = false
 path = "tests/client.rs"
+required-features = ["tokio"]
 
 [[test]]
 name = "server"
