--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ libc = "0.2.132"
 #  - std: Implement std-only traits for getrandom::Error
 #  - rdrand: Enable fallback RDRAND-based implementation on x86/x86_64
 getrandom = { version = "0.2.7", features = ["std", "rdrand"] }
-winapi = { version = "0.3.9", features = ["synchapi"] }
+windows-sys = { version = "0.42.0", features = ["Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
 
 [dev-dependencies]
 tempfile = "3"
