Add new API for creating jobserver and run cmds with the named fifo on unix (#38)
Fixed #36 

 - Add dep getrandom v0.2.7 for unix
 - Impl new fn `Client::new_with_fifo`
 - Fix `make-as-a-client` test: Use `Client::configure_make_and_run`
   so that `make` would actually load the jobserver and test it.
 - Impl `Client::configure_and_run_with_fifo`
 - Impl `Client::configure_make_and_run_with_fifo`

Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,14 +27,16 @@ cfg-if = "1.0.0"
 tokio = { version = "1", default-features = false, features = ["process"], optional = true }
 scopeguard = "1.1.0"
 
-[target.'cfg(unix)'.dependencies]
-libc = "0.2.132"
-
-[target.'cfg(windows)'.dependencies]
+[target.'cfg(any(unix, windows))'.dependencies]
 # Features: 
 #  - std: Implement std-only traits for getrandom::Error
 #  - rdrand: Enable fallback RDRAND-based implementation on x86/x86_64
 getrandom = { version = "0.2.7", features = ["std", "rdrand"] }
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.132"
+
+[target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.45.0", features = ["Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
 
 [dev-dependencies]
