--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ edition = "2018"
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.50"
 
+[features]
+check_pipe = []
+
 [dev-dependencies]
 futures = "0.1"
 num_cpus = "1.0"
