--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ documentation = "https://docs.rs/jobserver"
 description = """
 An implementation of the GNU make jobserver for Rust
 """
-edition = "2018"
+edition = "2021"
+rust-version = "1.66"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.50"
