--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,10 @@ edition = "2021"
 rust-version = "1.63"
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2.72"
+libc = "0.2.87"
+
+[target.'cfg(unix)'.dev-dependencies]
+nix = { version = "0.28.0", features = ["fs"] }
 
 [dev-dependencies]
 tempfile = "3.10.1"
