--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
 
+    - uses: Swatinem/rust-cache@v2
+
     - run: cargo test
 
     - name: Cache make compiled
