Speedup CI: Run `cargo-update` before caching
So that it knows which specific version is used to invalidate caching.

Also, on 1.63 fetching from registry is especially slow, running
`cargo +stable update` befoe this can speed it up a little bit.

Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
       run: rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       shell: bash
 
+    - run: cargo +stable update
+
     - uses: Swatinem/rust-cache@v2
 
     - run: cargo test
