Improve msrv mCI: Use `cargo-hack` instead of hard-coding msrv in CI
Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,19 +87,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
-    env:
-      MSRV: 1.63
     steps:
     - uses: actions/checkout@master
     - name: Install Rust (rustup)
-      run: |
-        rustup toolchain install $MSRV --no-self-update --profile minimal
-        rustup default $MSRV
-        rustup toolchain install nightly --no-self-update --profile minimal
+      run: rustup toolchain install nightly --no-self-update --profile minimal
       shell: bash
 
     - run: cargo +nightly update -Zminimal-versions
 
+    - uses: taiki-e/install-action@cargo-hack
+
     - uses: Swatinem/rust-cache@v2
 
-    - run: cargo check
+    - run: cargo hack check --lib --rust-version --ignore-private
