Add `Cargo.msrv.lock`, created using `-Zminimal-versions`
Signed-off-by: Jiahao XU <Jiahao_XU@outlook.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,10 +93,9 @@ jobs:
       run: rustup toolchain install nightly --no-self-update --profile minimal
       shell: bash
 
-    - run: cargo +nightly update -Zminimal-versions
-
     - uses: taiki-e/install-action@cargo-hack
 
+    - run: mv Cargo.msrv.lock Cargo.lock
     - uses: Swatinem/rust-cache@v2
 
     - run: cargo hack check --lib --rust-version --ignore-private
