--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,54 +13,37 @@ jobs:
         rust: [stable, beta, nightly]
         os: [ubuntu-latest, macos-14, windows-latest]
     steps:
-    - uses: actions/checkout@master
-    - name: Install Rust (rustup)
-      run: |
-        rustup toolchain install ${{ matrix.rust }} --no-self-update --profile minimal
-        rustup default ${{ matrix.rust }}
-      shell: bash
+      - uses: actions/checkout@master
+      - name: Install Rust (rustup)
+        run: |
+          rustup toolchain install ${{ matrix.rust }} --no-self-update --profile minimal
+          rustup default ${{ matrix.rust }}
+        shell: bash
 
-    - uses: Swatinem/rust-cache@v2
+      - uses: Swatinem/rust-cache@v2
 
-    - run: cargo test --locked
+      - run: cargo test --locked
 
-    - name: Cache make compiled
-      if: ${{ !startsWith(matrix.os, 'windows') }}
-      id: cache-make
-      uses: actions/cache@v4
-      with:
-        path: /usr/local/bin/make
-        key: ${{ runner.os }}-make-4.4.1
+      - name: Compile make 4.4.1
+        uses: ./.github/actions/compile-make
+        with:
+          version: 4.4.1
 
-    # Compile it from source (temporarily)
-    - name: Make GNU Make from source
-      if: ${{ !startsWith(matrix.os, 'windows') && steps.cache-make.outputs.cache-hit != 'true' }}
-      env:
-        VERSION: "4.4.1"
-      shell: bash
-      run: |
-        curl "https://ftp.gnu.org/gnu/make/make-${VERSION}.tar.gz" | tar xz
-        pushd "make-${VERSION}"
-        ./configure
-        make -j 4
-        popd
-        cp -p "make-${VERSION}/make" /usr/local/bin
-
-    - name: Test against GNU Make from source
-      if: ${{ !startsWith(matrix.os, 'windows') }}
-      shell: bash
-      run: cargo test --locked
-      env:
-        MAKE: /usr/local/bin/make
+      - name: Test against GNU Make 4.4.1
+        if: ${{ !startsWith(matrix.os, 'windows') }}
+        shell: bash
+        run: cargo test --locked
+        env:
+          MAKE: /usr/local/bin/make-4.4.1
 
   rustfmt:
     name: Rustfmt
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Install Rust
-      run: rustup update stable && rustup default stable && rustup component add rustfmt
-    - run: cargo fmt -- --check
+      - uses: actions/checkout@master
+      - name: Install Rust
+        run: rustup update stable && rustup default stable && rustup component add rustfmt
+      - run: cargo fmt -- --check
 
   publish_docs:
     name: Publish Documentation
@@ -86,12 +69,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-14, windows-latest]
     steps:
-    - uses: actions/checkout@master
-    - name: Install Rust (rustup)
-      run: rustup toolchain install nightly --no-self-update --profile minimal
-      shell: bash
+      - uses: actions/checkout@master
+      - name: Install Rust (rustup)
+        run: rustup toolchain install nightly --no-self-update --profile minimal
+        shell: bash
 
-    - uses: taiki-e/install-action@cargo-hack
-    - uses: Swatinem/rust-cache@v2
+      - uses: taiki-e/install-action@cargo-hack
+      - uses: Swatinem/rust-cache@v2
 
-    - run: cargo hack check --lib --rust-version --ignore-private --locked
+      - run: cargo hack check --lib --rust-version --ignore-private --locked
