--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: CI
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 env:
   CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
@@ -10,10 +10,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        rust: [stable, beta, nightly]
-        os: [ubuntu-latest, macos-14, windows-latest]
+        rust: [ stable, beta, nightly ]
+        os: [ ubuntu-latest, macos-14, windows-latest ]
     steps:
       - uses: actions/checkout@master
+
+      - name: Add musl
+        if: ${{ matrix.libc == 'musl' }}
+        run: apt-get install -y musl musl-dev
+
       - name: Install Rust (rustup)
         run: |
           rustup toolchain install ${{ matrix.rust }} --no-self-update --profile minimal
@@ -35,6 +40,16 @@ jobs:
         run: cargo test --locked
         env:
           MAKE: /usr/local/bin/make-4.4.1
+
+  test_musl:
+    container: rust:alpine
+    runs-on: ubuntu-latest
+    steps:
+      - run: apk add musl-dev
+
+      - uses: Swatinem/rust-cache@v2
+
+      - run: cargo test --locked
 
   rustfmt:
     name: Rustfmt
@@ -67,7 +82,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-14, windows-latest]
+        os: [ ubuntu-latest, macos-14, windows-latest ]
     steps:
       - uses: actions/checkout@master
       - name: Install Rust (rustup)
