Use getrandom for randomness

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ libc = "0.2.87"
 [target.'cfg(unix)'.dev-dependencies]
 nix = { version = "0.28.0", features = ["fs"] }
 
+[target.'cfg(windows)'.dependencies]
+getrandom = { version = "0.3.2", features = ["std"] }
+
 [dev-dependencies]
 tempfile = "3.10.1"
 
